Fixed button appearance on Firefox.

--- a/mtg.css
+++ b/mtg.css
@@ -45,7 +45,8 @@ body {
   width: 70%;
   font-size: 2rem;
   background: transparent;
-  border-color: #000000;
+  color: #000000;
+  border: 2px solid #000000;
   border-radius: 10px;
 }
 
